Clean lint warnings in new/modified classes
Includes TransportManager, SdlRouterService, MultipleUusTransport, SdlSession2, SdlProtocol,ISecondaryTransportListener. Most Lint issues cleared, but some remain that are less important.